update Manifold to use the bindings